--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="navbar">
-        <img src="/images/Logo.svg" alt="Logo">
+        <img src="images/Logo.svg" alt="Logo">
         <nav class="navigation">
             <ul class="nav-list">
                 <li class="nav-item">
