--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="navbar">
+    <div class="navbar container">
       <img src="images/logo.svg" alt="Logo" />
       <nav class="navigation">
         <ul class="nav-list">
@@ -35,10 +35,32 @@
       </nav>
     </div>
     <!-- ./navbar -->
-    <header class="header">
-      <img src="images/" alt="" />
+    <header class="header container">
+      <img src="images/avatar.png" alt="" />
       <!-- /.header-photo -->
-      <div class="header-text"></div>
+      <div class="header-text">
+        <strong class="header-strong">
+          Привет 👋
+        </strong>
+        <h1 class="header-heading">
+         <span class="header-primary"> Я фронтенд-разработчик и веб-дизайнер</span> <br> Меня зовут Артем Исламов и я делаю сайты для людей и компаний
+        </h1>
+        <div class="header-links">
+          <ul class="social-list">
+            <li class="social-item">
+              <a href="" class="socila-link">
+                <img src="" alt="" class="social-logo"></a></li>
+            <li class="social-item">
+              <a href="" class="socila-link">
+                <img src="" alt="" class="social-logo"></a></li>
+            <li class="social-item">
+              <a href="" class="socila-link"><img src="" alt="" class="social-logo"></a></li>
+            <li class="social-item"><a href="" class="socila-link"><img src="" alt="" class="social-logo"></a></li>
+            <li class="social-item"><a href="" class="socila-link"><img src="" alt="" class="social-logo"></a></li>
+          </ul>
+        </div>
+        <!-- /.header-links -->
+      </div>
       <!-- /.header-text -->
     </header>
     <!-- /.header -->
