--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
       <img src="images/avatar.png" alt="" />
       <!-- /.header-photo -->
       <div class="header-text">
-        <strong class="header-strong">
-          Привет 👋
-        </strong>
+        <strong class="header-strong"> Привет 👋 </strong>
         <h1 class="header-heading">
-         <span class="header-primary"> Я фронтенд-разработчик и веб-дизайнер</span> <br> Меня зовут Артем Исламов и я делаю сайты для людей и компаний
+          <span class="header-primary">
+            Я фронтенд-разработчик и веб-дизайнер</span
+          >
+          <br />
+          Меня зовут Артем Исламов и я делаю сайты для людей и компаний
         </h1>
         <div class="header-links">
           <ul class="social-list">
