--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             Я фронтенд-разработчик и веб-дизайнер</span
           >
           <br />
-          Меня зовут Артем Исламов и я делаю сайты для людей и компаний
+          Меня зовут Антон Барашков и я делаю сайты для людей и компаний
         </h1>
         <div class="header-links">
           <ul class="social-list">
@@ -150,5 +150,57 @@
         </div>
       </div>
     </section>
+    <section class="developer container">
+      <img src="images/developer-photo.png" alt="" class="developer-photo">
+      <div class="developer-about">
+        <span class="developer-hello">Рад вас видеть</span>
+        <h2 class="developer-title">Я Антон Барашков</h2>
+        <p class="developer-text">Я разрабатываю сайты для людей и компаний. Делаю всё сам: составляю прототип, дизайн-макет, пишу код.</p>
+        <span class="motto">Код, Дизайн, Обучение</span>
+        <p class="developer-text">Могу собрать страницу для вашей компании, даже если запускать её нужно уже завтра. Из инструментов есть: 
+          Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
+          <img src="images/sign.png" alt="" class="diveloper-sign">
+      </div>
+    </section>
+    <!-- /.developer container -->
+    <section class="skills container">
+      <h2 class="skills-title">Работаю с разными языками и инструментами</h2>
+      <ul class="tags">
+        <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+        <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+        <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
+        <li class="tags-item"><a href="#" class="tag">Wordpress</a></li>
+        <li class="tags-item"><a href="#" class="tag">npn</a></li>
+        <li class="tags-item"><a href="#" class="tag">Reactjs</a></li>
+        <li class="tags-item"><a href="#" class="tag">Nextjs</a></li>
+        <li class="tags-item"><a href="#" class="tag">UI Design</a></li>
+        <li class="tags-item"><a href="#" class="tag">SASS</a></li>
+      </ul>
+    </section>
+    <!-- /.skills container -->
+    <section class="feedback form-container">
+      <h2 class="feedback-title">Готов обсудить проект...</h2>
+      <form action="#" class="form">
+        <div class="input-group">
+          <label class="input-label" for="username">Имя</label>
+        <input id="username" type="text" class="input">
+        </div>
+        <div class="input-group">
+          <label class="input-label" for="userEmail">Email</label>
+        <input id="userEmail" type="text" class="input">
+        </div>
+        <div class="input-group">
+          <label class="input-label" for="userMessege">Сообщение</label>
+        <textarea class="input textarea" id="userMessege" cols="30" rows="10"></textarea>
+        </div>
+        <div class="button-group">
+          <button type="submit" class="submit-button" >
+            <img class="cv-icon" src="images/Icons/send.svg" alt="send icon" />
+            <span class="cv-text">Отправить </span>
+          </button>
+        </div>
+      </form>
+    </section>
+    <!-- /.feedbak -->
   </body>
 </html>
