--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <!-- ./navbar -->
     <header class="header container">
-      <img src="images/avatar.png" alt="" />
+      <img class="avatar-icon" src="images/avatar.png" alt="" />
       <!-- /.header-photo -->
       <div class="header-text">
         <strong class="header-strong"> Привет 👋 </strong>
